--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -56,7 +56,7 @@
     "else:\n",
     "    print('A sentença não é verdadeira!')\n",
     "print()\n",
-    "\n",
+    "#############################################################################\n",
     "# Condicional if (se)... else (senão) com variável\n",
     "dia = 'Terça'\n",
     "if dia == 'segunda':\n",
@@ -64,7 +64,7 @@
     "else:\n",
     "    print('Hoje vai chover!')\n",
     "print()\n",
-    "\n",
+    "#############################################################################\n",
     "# Podemos usar o operador elif para validar mais uma condição\n",
     "dia = 'Terça'\n",
     "if dia == 'segunda':\n",
@@ -74,7 +74,7 @@
     "else:\n",
     "    print('Sem previsão do tempo para o dia selecionado')\n",
     "print()\n",
-    "\n",
+    "#############################################################################\n",
     "# Operadores relacionais em Pyhton\n",
     "if 4 >= 4:\n",
     "    print('Essa expressão é verdadeira')\n",
@@ -110,7 +110,7 @@
     "else:\n",
     "    print('Essa expressão não é verdadeira')\n",
     "print()    \n",
-    "\n",
+    "#############################################################################\n",
     "# Condicionais aninhados\n",
     "idade = 18\n",
     "nome = 'Bob'\n",
@@ -120,7 +120,7 @@
     "    else:\n",
     "        print('Desculpe, mas você não pode entrar!')\n",
     "print()\n",
-    "\n",
+    "#############################################################################\n",
     "# Operadores Lógicos\n",
     "idade = 13\n",
     "nome = 'Luis'\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,25 @@
      "text": [
       "2 3 4 \n",
       "Data Science Academy \n",
-      "0 1 2 3 4 "
+      "0 1 2 3 4 \n",
+      "2 4 6 8 10 \n",
+      "0 5 10 15 20 25 30 35 40 45 50 55 60 65 70 75 80 85 90 95 100 \n",
+      "Python é uma linguagem de programação divertida!\n",
+      "\n",
+      "0 0 0 <--- 1a linha\n",
+      "1 2 3 <--- 2a linha\n",
+      "2 4 6 <--- 3a linha\n",
+      "3 6 9 <--- 4a linha\n",
+      "4 8 12 <--- 5a linha\n",
+      "O número 47 foi encontrado nas duas listas!\n",
+      "34 46 100 38 50 104 44 56 110 68 80 134 \n",
+      "A soma de todos os números pares das duas listas é igual a 240\n",
+      "A soma de todos os números pares das duas listas é igual a 240\n",
+      "\n",
+      "Soma dos valores pares: 218\n",
+      "Maior número: 32.4\n",
+      "k1 k2 k3 \n",
+      "k1 Python k2 R k3 Scala "
      ]
     }
    ],
@@ -199,7 +217,70 @@
     "string1 = 'Python é uma linguagem de programação divertida!'\n",
     "for caracter in string1:\n",
     "    print(caracter, end='')\n",
-    "print()    "
+    "print()\n",
+    "print()\n",
+    "#############################################################################\n",
+    "# Loops aninhados\n",
+    "lista1 = [0, 1, 2, 3, 4]\n",
+    "lista2 = [1, 2, 3]\n",
+    "for elemento_lista1 in lista1:\n",
+    "    for elemento_lista2 in lista2:\n",
+    "        print(elemento_lista1 * elemento_lista2, end=' ')\n",
+    "    print(f'<--- {elemento_lista1+1}a linha')  \n",
+    "\n",
+    "lista3 = [12,14,23,45,47]\n",
+    "lista4 = [11,17,33,47,58]\n",
+    "for elemento_lista3 in lista3:\n",
+    "    for elemento_lista4 in lista4:\n",
+    "        if elemento_lista3 == 47 and elemento_lista4 == 47:\n",
+    "            print('O número 47 foi encontrado nas duas listas!')\n",
+    "            \n",
+    "lista5 = [12,16,17,22,46]\n",
+    "lista6 = [22,34,45,77,88]\n",
+    "for elemento_lista5 in lista5:\n",
+    "    for elemento_lista6 in lista6:\n",
+    "        if elemento_lista5 % 2 == 0 and elemento_lista6 % 2 == 0:\n",
+    "            print(elemento_lista5 + elemento_lista6, end=' ')\n",
+    "print()            \n",
+    "\n",
+    "soma = 0            \n",
+    "for lista_de_listas in [lista5, lista6]:\n",
+    "    for elemento_lista_de_listas in lista_de_listas:\n",
+    "        if elemento_lista_de_listas % 2 == 0:\n",
+    "            soma = soma + elemento_lista_de_listas\n",
+    "print(f'A soma de todos os números pares das duas listas é igual a {soma}')            \n",
+    "            \n",
+    "soma = 0            \n",
+    "for lista_de_listas in [lista5, lista6]:\n",
+    "    for elemento_lista_de_listas in lista_de_listas:\n",
+    "        if elemento_lista_de_listas % 2 == 0:\n",
+    "            soma += elemento_lista_de_listas     # Outro jeito de fazer\n",
+    "print(f'A soma de todos os números pares das duas listas é igual a {soma}')\n",
+    "print()\n",
+    "#############################################################################\n",
+    "# Loop for em listas concatenadas, em listas de listas (matrizes) e em dicionários\n",
+    "soma = 0\n",
+    "lista7 = [13,23,45,64,77]\n",
+    "lista8 = [10,34,35,44,66]\n",
+    "for num in lista7 + lista8:\n",
+    "    if num % 2 == 0:\n",
+    "        soma += num     # O mesmo que soma = soma + num\n",
+    "print(f'Soma dos valores pares: {soma}')  \n",
+    "\n",
+    "matriz = [[1,3,5],[5,8,12],[13.2,24.3,32.4]]\n",
+    "maior_numero = 0\n",
+    "for linha in matriz:\n",
+    "    for numero in linha:\n",
+    "        if numero > maior_numero:\n",
+    "            maior_numero = numero\n",
+    "print(f'Maior número: {maior_numero:.1f}')            \n",
+    "\n",
+    "dict = {'k1':'Python', 'k2':'R', 'k3':'Scala'}\n",
+    "for item in dict:\n",
+    "    print(item, end=' ')\n",
+    "print()    \n",
+    "for k,v in dict.items():\n",
+    "    print(k,v, end=' ')"
    ]
   }
  ],
