--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -290,6 +290,69 @@
    "source": [
     "### Loop while."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 \n",
+      "O valor de x nessa iteração é 0\n",
+      "x ainda é menor que 5, somando 1 a x\n",
+      "O valor de x nessa iteração é 1\n",
+      "x ainda é menor que 5, somando 1 a x\n",
+      "O valor de x nessa iteração é 2\n",
+      "x ainda é menor que 5, somando 1 a x\n",
+      "O valor de x nessa iteração é 3\n",
+      "x ainda é menor que 5, somando 1 a x\n",
+      "O valor de x nessa iteração é 4\n",
+      "x ainda é menor que 5, somando 1 a x\n",
+      "loop concluído!\n",
+      "Agora o valor de x é 5!\n",
+      "\n",
+      "0 1 2 3 \n",
+      "Python é incrível!"
+     ]
+    }
+   ],
+   "source": [
+    "# Usando o loop while\n",
+    "valor = 0\n",
+    "while valor < 10:\n",
+    "    print(valor, end=' ')\n",
+    "    valor = valor + 1\n",
+    "print()\n",
+    "\n",
+    "x = 0\n",
+    "while x < 5:\n",
+    "    print(f'O valor de x nessa iteração é {x}')\n",
+    "    print('x ainda é menor que 5, somando 1 a x')\n",
+    "    x += 1\n",
+    "else:\n",
+    "    print('loop concluído!')\n",
+    "print(f'Agora o valor de x é {x}!')    \n",
+    "print()\n",
+    "#############################################################################\n",
+    "# Usando pass, break e continue\n",
+    "valor = 0\n",
+    "while valor < 8:\n",
+    "    if valor == 4:\n",
+    "        break\n",
+    "    else:\n",
+    "        pass                # nesse caso nem precisaria do pass\n",
+    "    print(valor, end=' ')\n",
+    "    valor = valor + 1\n",
+    "print()    \n",
+    "\n",
+    "for letra in 'Python é zzzincrível!':\n",
+    "    if letra == 'z': \n",
+    "        continue\n",
+    "    print(letra, end='')"
+   ]
   }
  ],
  "metadata": {
