--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -351,7 +351,11 @@
     "for letra in 'Python é zzzincrível!':\n",
     "    if letra == 'z': \n",
     "        continue\n",
-    "    print(letra, end='')"
+    "    print(letra, end='')\n",
+    "print()\n",
+    "#############################################################################\n",
+    "# Loop for e while juntos\n",
+    "#     "
    ]
   }
  ],
