loop while e for

--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -355,7 +355,11 @@
     "print()\n",
     "#############################################################################\n",
     "# Loop for e while juntos\n",
-    "#     "
+    "primos = []\n",
+    "for num in range(2, 31, 1):\n",
+    "    eh_primo = True \n",
+    "    i = 2\n",
+    "    while i <= num // 2:    "
    ]
   }
  ],
