--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,8 @@
       "Agora o valor de x é 5!\n",
       "\n",
       "0 1 2 3 \n",
-      "Python é incrível!"
+      "Python é incrível!\n",
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
      ]
     }
    ],
@@ -356,10 +357,18 @@
     "#############################################################################\n",
     "# Loop for e while juntos\n",
     "primos = []\n",
-    "for num in range(2, 31, 1):\n",
+    "for numero in range(2, 31, 1):\n",
     "    eh_primo = True \n",
     "    i = 2\n",
-    "    while i <= num // 2:    "
+    "    while i <= numero // 2:\n",
+    "        if numero % i == 0:\n",
+    "            eh_primo: False\n",
+    "            break\n",
+    "        i += 1\n",
+    "        \n",
+    "    if eh_primo:\n",
+    "        primos.append(numero)\n",
+    "print(primos)            "
    ]
   }
  ],
