--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
       "\n",
       "0 1 2 3 \n",
       "Python é incrível!\n",
-      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n"
      ]
     }
    ],
@@ -357,12 +357,12 @@
     "#############################################################################\n",
     "# Loop for e while juntos\n",
     "primos = []\n",
-    "for numero in range(2, 31, 1):\n",
+    "for numero in range(2, 31):\n",
     "    eh_primo = True \n",
     "    i = 2\n",
     "    while i <= numero // 2:\n",
     "        if numero % i == 0:\n",
-    "            eh_primo: False\n",
+    "            eh_primo = False\n",
     "            break\n",
     "        i += 1\n",
     "        \n",
