loop for e while

--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -354,6 +354,7 @@
     "        continue\n",
     "    print(letra, end='')\n",
     "print()\n",
+    "print()\n",
     "#############################################################################\n",
     "# Loop for e while juntos\n",
     "primos = []\n",
@@ -364,8 +365,7 @@
     "        if numero % i == 0:\n",
     "            eh_primo = False\n",
     "            break\n",
-    "        i += 1\n",
-    "        \n",
+    "        i += 1       \n",
     "    if eh_primo:\n",
     "        primos.append(numero)\n",
     "print(primos)            "
