--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -316,6 +316,7 @@
       "\n",
       "0 1 2 3 \n",
       "Python é incrível!\n",
+      "\n",
       "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n"
      ]
     }
@@ -368,7 +369,15 @@
     "        i += 1       \n",
     "    if eh_primo:\n",
     "        primos.append(numero)\n",
-    "print(primos)            "
+    "print(primos)  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Intervalos de valores em Python."
    ]
   }
  ],
