--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -379,6 +379,35 @@
    "source": [
     "### Intervalos de valores em Python."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 \n",
+      "\n",
+      "50 52 54 56 58 60 62 64 66 68 70 72 74 76 78 80 82 84 86 88 90 92 94 96 98 100 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imprimindo os números de 1 a 10:\n",
+    "for i in range(1, 11):\n",
+    "    print(i, end=' ')\n",
+    "print()\n",
+    "print()\n",
+    "# Imprimindo os números pares entre 50 e 101:\n",
+    "for i in range(50, 101, 2):\n",
+    "    print(i, end=' ')\n",
+    "print()\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
