Intervalos de Valores

--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,12 @@
       "1 2 3 4 5 6 7 8 9 10 \n",
       "\n",
       "50 52 54 56 58 60 62 64 66 68 70 72 74 76 78 80 82 84 86 88 90 92 94 96 98 100 \n",
-      "\n"
+      "\n",
+      "51 53 55 57 59 61 63 65 67 69 71 73 75 77 79 81 83 85 87 89 91 93 95 97 99 101 \n",
+      "\n",
+      "0 -2 -4 -6 -8 -10 -12 -14 -16 -18 \n",
+      "\n",
+      "0 1 2 3 "
      ]
     }
    ],
@@ -402,11 +407,26 @@
     "    print(i, end=' ')\n",
     "print()\n",
     "print()\n",
-    "# Imprimindo os números pares entre 50 e 101:\n",
+    "# Imprimindo os números pares entre 50 e 101\n",
     "for i in range(50, 101, 2):\n",
     "    print(i, end=' ')\n",
     "print()\n",
-    "print()"
+    "print()\n",
+    "# Imprimindo os números ímpares entre 50 e 101\n",
+    "for i in range(51, 102, 2):\n",
+    "    print(i, end=' ')\n",
+    "print()\n",
+    "print()\n",
+    "# Imprimindo os números pares negativos entre 0 e -20\n",
+    "for i in range(0, -20, -2):\n",
+    "    print(i, end=' ')\n",
+    "print()\n",
+    "print()\n",
+    "# Usando o tamanho de uma lista na função range\n",
+    "lista=['Abacaxi', 'Banana', 'Morango', 'Uva']\n",
+    "lista_tamanho = len(lista)\n",
+    "for i in range(0, lista_tamanho):\n",
+    "    print(i,end=' ')"
    ]
   }
  ],
