--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -428,6 +428,14 @@
     "for i in range(0, lista_tamanho):\n",
     "    print(i,end=' ')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos em Python."
+   ]
   }
  ],
  "metadata": {
