Métodos em Python

--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -434,8 +434,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Métodos em Python."
+    "### Métodos em Python (tudo em Python é um objeto e cada objeto possui métodos e atributos)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
