--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -434,15 +434,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Métodos em Python (tudo em Python é um objeto e cada objeto possui métodos e atributos)"
+    "### Métodos em Python (tudo em Python é um objeto e cada objeto possui métodos e atributos)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "\n",
+      "[100, -2, 12, 65, 0, 100]\n",
+      "2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Criando uma lista\n",
+    "lista = [100, -2, 12, 65, 0]\n",
+    "print(type(lista))\n",
+    "print()\n",
+    "# Usando um método do objeto lista\n",
+    "lista.append(100)\n",
+    "print(lista)\n",
+    "print(lista.count(100))\n",
+    "print()\n",
+    "# A função help() explica como utilizar cada método de um objeto"
+   ]
   }
  ],
  "metadata": {
