--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,18 @@
       "\n",
       "[100, -2, 12, 65, 0, 100]\n",
       "2\n",
-      "\n"
+      "\n",
+      "Help on built-in function count:\n",
+      "\n",
+      "count(value, /) method of builtins.list instance\n",
+      "    Return number of occurrences of value.\n",
+      "\n",
+      "\n",
+      "['__add__', '__class__', '__class_getitem__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n",
+      "\n",
+      "<class 'str'>\n",
+      "Isso é uma string\n",
+      "['Isso', 'é', 'uma', 'string']\n"
      ]
     }
    ],
@@ -463,12 +474,26 @@
     "lista = [100, -2, 12, 65, 0]\n",
     "print(type(lista))\n",
     "print()\n",
-    "# Usando um método do objeto lista\n",
+    "\n",
+    "# Usando um método do objeto lista (usar o . e digitar tab para obter as opções)\n",
     "lista.append(100)\n",
     "print(lista)\n",
     "print(lista.count(100))\n",
     "print()\n",
-    "# A função help() explica como utilizar cada método de um objeto"
+    "\n",
+    "# A função help() explica como utilizar cada método de um objeto\n",
+    "help(lista.count)\n",
+    "print()\n",
+    "\n",
+    "# A função dir() mostra todos os métodos e atributos de um objeto\n",
+    "print(dir(lista))\n",
+    "print()\n",
+    "\n",
+    "# Verificando métodos e atributos\n",
+    "frase = 'Isso é uma string'\n",
+    "print(type(frase))\n",
+    "print(frase)\n",
+    "print(frase.split())"
    ]
   }
  ],
