--- a/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
+++ b/Curso Python - Nível Introdutório/02VariaveisTiposEstruturaDados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +51,7 @@
     }
    ],
    "source": [
+    "# Operações comuns\n",
     "a = 3.1 + 6.4\n",
     "print(a)\n",
     "b = 4 + 4.0\n",
@@ -73,34 +74,34 @@
     "print(int(6.5))\n",
     "print(int(6.6))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Hexadecimal\n",
     "print(hex(390))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Binário\n",
     "print(bin(286))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Valor Absoluto\n",
     "print(abs(8))\n",
     "print(abs(-8))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Arredondar\n",
     "print(round(3.476213, 2))\n",
     "print(round(4.37180, 3))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Potência\n",
     "print(pow(6, 2))\n",
     "print(pow(4, 3))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Tipo de Variável\n",
     "print(type(6.57))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Operações com Variáveis\n",
     "altura, largura = 2, 4\n",
     "perimetro = altura * 2 + largura * 2\n",
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +175,7 @@
     "# O /n funciona como tecla Enter\n",
     "print('Testando \\n Strings \\n em \\n Python')\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Imprimindo elementos da String\n",
     "s = 'Data Science Academy'\n",
     "print(s)\n",
@@ -191,42 +192,42 @@
     "print(s[::-1])\n",
     "print(s + \" \" + 'me ensina Python')\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Mudando a String (não é possível mudar um caractere dentro dela)\n",
     "s = s + \" \" + 'me ensina Python'\n",
     "print(s)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# FUnções Built-in de Strings\n",
     "# Upper Case (maiúsculas)\n",
     "print(s.upper())\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Lower Case (minúsculas)\n",
     "print(s.lower())\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Dividir uma String por espaços em branco (padrão) ou caractere determinado\n",
     "print(s.split())\n",
     "print(s.split('y'))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Capitalize (Retorna a primeira letra como maiúscula e todas as outras como minúsculas)\n",
     "print(s.capitalize())\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Contar caracteres ou palavras\n",
     "print(s.count('a'))\n",
     "print(s.count('Python'))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# saber se a string tem alguma característica\n",
     "print(s.isalnum())\n",
     "print(s.islower())\n",
     "print(s.isspace())\n",
     "print(s.endswith('n'))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Comparando Strings\n",
     "print('Python' == 'R')\n",
     "print('Python' == 'Python')\n"
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +300,7 @@
     "del lista4[3]\n",
     "print(lista4)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Criando uma lista de listas\n",
     "listas = [[1,2,3], [2,3,4], [5,6,7]] \n",
     "print(listas)\n",
@@ -318,7 +319,7 @@
     "g = e + d\n",
     "print(g)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Concatenando Listas\n",
     "lista5 = [3,7,10]\n",
     "lista6 = [17,19,22]\n",
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +387,7 @@
     "print(listaCarreiras)\n",
     "print(listaCarreiras.count(\"Engenheiro de IA\"))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Criando uma Lista vazia\n",
     "listaVazia = []\n",
     "print(listaVazia)\n",
@@ -395,7 +396,7 @@
     "listaVazia.append(50)\n",
     "print(listaVazia)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Copiando os itens de uma Lista antiga para uma nova\n",
     "listaAntiga = [1,2,5,10]\n",
     "listaNova = []\n",
@@ -403,7 +404,7 @@
     "    listaNova.append(item)\n",
     "print(listaNova)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Estender uma lista\n",
     "listaCidades = [\"Recife\",\"Manaus\",\"Salvador\"]\n",
     "print(listaCidades)\n",
@@ -411,7 +412,7 @@
     "print(listaCidades)\n",
     "print(listaCidades.index('Salvador'))\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Adicionar e remover itens da Lista\n",
     "listaMunicipios = ['São Paulo', 'Guarulhos', 'Santo André', 'São Caetano']\n",
     "print(listaMunicipios)\n",
@@ -420,7 +421,7 @@
     "listaMunicipios.remove('São Bernardo')\n",
     "print(listaMunicipios)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Inverter e ordenar os itens da lista\n",
     "listaMarcas = [\"Chevrolet\", \"Ford\", \"Hyundai\", \"Citroen\", \"Honda\", \"Volkswagen\"]\n",
     "listaMarcas.reverse()\n",
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +485,7 @@
     "print(estudantes['Pedro'])\n",
     "print(estudantes[\"Ronaldo\"])\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Adicionando, limpoando e deletando o Dicionário\n",
     "estudantes['Marcelo'] = 30\n",
     "print(estudantes)\n",
@@ -495,20 +496,20 @@
     "print(estudantes)\n",
     "del estudantes #deletado o dicionário\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Chaves e Valores\n",
     "estudantes2 = {'Gabriel':22, 'Junior':24, 'Manoel':26, 'Maria':28}\n",
     "print(len(estudantes2))\n",
     "print(estudantes2.keys())\n",
     "print(estudantes2.values())\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Update de Dicionários\n",
     "estudantes3 = {'Vitor': 30, 'Messias':32, 'Mari':34, 'Esther':36}\n",
     "estudantes2.update(estudantes3)\n",
     "print(estudantes2)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Extraindo Valores de Chaves\n",
     "dict = {}\n",
     "dict['key1'] = 'Data Science'\n",
@@ -531,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -558,22 +559,22 @@
     "print(dict1)\n",
     "print(dict1['chave2'])\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Acessando um item da lista, dentro do dicionário\n",
     "print(dict1['chave3'][0])\n",
     "print(dict1['chave3'][0].upper())\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Operações com item da lista, dentro do dicionário\n",
     "var1 = dict1['chave2'][1] - 200\n",
     "print(var1)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Duas operações no mesmo comando, para atualizar um item dentro da lista\n",
     "dict1['chave2'][2] += 26.6 # faz a operação e depois atribui com o '='\n",
     "print(dict1)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Criando dicionários aninhados\n",
     "dictAninhado = {'key1':{'key2':{'key3':'dict aninhado em python'}}}\n",
     "print(dictAninhado['key1']['key2']['key3'])"
@@ -589,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +619,7 @@
     "tupla2 = ('Chocolate')\n",
     "print(tupla2)\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Trabalhando com Tuplas\n",
     "tupla2 = ('Mar', 34, 'Aviões', 18.8, 'Geladeira' )\n",
     "print(tupla2[0])\n",
@@ -627,7 +628,7 @@
     "print(tupla2.index('Aviões'))\n",
     "del tupla2\n",
     "print()\n",
-    "#############################################################################\n",
+    "\n",
     "# Convertendo Tuplas para Listas e Listas para Tuplas\n",
     "tupla3 = ('Mariana', 44, 'Luis')\n",
     "listaConvertida = list(tupla3)\n",
