--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -503,6 +503,85 @@
    "source": [
     "### Funções."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "\n",
+      "Hello World\n",
+      "Hello Bob\n",
+      "\n",
+      "Hello André\n",
+      "\n",
+      "Número 0\n",
+      "Número 1\n",
+      "Número 2\n",
+      "Número 3\n",
+      "Número 4\n",
+      "\n",
+      "Primeiro número: 4\n",
+      "Segundo Número: 7\n",
+      "Soma: 11\n",
+      "\n",
+      "O parâmetro passado foi: 10\n",
+      "O parâmetro passado foi: Data\n",
+      "O parâmetro passado foi: Science\n",
+      "O parâmetro passado foi: Academy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print é uma função built-in em Python\n",
+    "print('Hello World')\n",
+    "print()\n",
+    "\n",
+    "# Definindo uma função em Python\n",
+    "def primeiraFunc():\n",
+    "    print('Hello World')    \n",
+    "primeiraFunc()\n",
+    "\n",
+    "def segundaFunc():\n",
+    "    nome = 'Bob'\n",
+    "    print(f'Hello {nome}')\n",
+    "segundaFunc()\n",
+    "print()\n",
+    "\n",
+    "# Definindo uma função com parâmetro\n",
+    "def terceiraFunc(nome):\n",
+    "    print(f'Hello {nome}')\n",
+    "terceiraFunc('André') \n",
+    "print()\n",
+    "\n",
+    "# Função para imprimir números\n",
+    "def imprimeNumeros():\n",
+    "    for i in range(0, 5):\n",
+    "        print(f'Número {i}')\n",
+    "imprimeNumeros() \n",
+    "print()\n",
+    "\n",
+    "# Função para somar números\n",
+    "def addNum(firstnum, secondnum):\n",
+    "    print(f'Primeiro número: {firstnum}')\n",
+    "    print(f'Segundo Número: {secondnum}')\n",
+    "    print(f'Soma: {firstnum + secondnum}')\n",
+    "addNum(4,7)    \n",
+    "print()\n",
+    "\n",
+    "# Funções com número variável de argumentos (usando o *)\n",
+    "def printVarInfo(arg1, *vartuple):\n",
+    "    print(f'O parâmetro passado foi: {arg1}')\n",
+    "    for item in vartuple:\n",
+    "        print(f'O parâmetro passado foi: {item}')\n",
+    "printVarInfo(10) \n",
+    "printVarInfo('Data','Science','Academy')"
+   ]
   }
  ],
  "metadata": {
