--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,10 @@
       "O parâmetro passado foi: 10\n",
       "O parâmetro passado foi: Data\n",
       "O parâmetro passado foi: Science\n",
-      "O parâmetro passado foi: Academy\n"
+      "O parâmetro passado foi: Academy\n",
+      "\n",
+      "125\n",
+      "10\n"
      ]
     }
    ],
@@ -580,7 +583,16 @@
     "    for item in vartuple:\n",
     "        print(f'O parâmetro passado foi: {item}')\n",
     "printVarInfo(10) \n",
-    "printVarInfo('Data','Science','Academy')"
+    "printVarInfo('Data','Science','Academy')\n",
+    "print()\n",
+    "\n",
+    "# Variável global e local (evitar usar o mesmo nome para ambas)\n",
+    "var_global = 10                   #variável global (está definida e pode ser chamada fora da função)\n",
+    "def multiplica_numeros(num1,num2):\n",
+    "    var_local = num1 * num2      #váriavel local (se não está definida, não pode ser chamada fora da função)\n",
+    "    print(var_local)\n",
+    "multiplica_numeros(5,25)\n",
+    "print(var_global)"
    ]
   }
  ],
