--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -592,7 +592,9 @@
     "    var_local = num1 * num2      #váriavel local (se não está definida, não pode ser chamada fora da função)\n",
     "    print(var_local)\n",
     "multiplica_numeros(5,25)\n",
-    "print(var_global)"
+    "print(var_global)\n",
+    "\n",
+    "# Funções Built-in\n"
    ]
   }
  ],
