--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,11 @@
       "O parâmetro passado foi: Academy\n",
       "\n",
       "125\n",
-      "10\n"
+      "10\n",
+      "\n",
+      "23\n",
+      "False\n",
+      "4\n"
      ]
     }
    ],
@@ -593,8 +597,12 @@
     "    print(var_local)\n",
     "multiplica_numeros(5,25)\n",
     "print(var_global)\n",
+    "print()\n",
     "\n",
-    "# Funções Built-in\n"
+    "# Funções Built-in\n",
+    "print(abs(-23))\n",
+    "print(bool(0))\n",
+    "print(int(4.4))"
    ]
   }
  ],
