--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -501,12 +501,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Funções."
+    "### Funções Parte 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -536,11 +536,7 @@
       "O parâmetro passado foi: Academy\n",
       "\n",
       "125\n",
-      "10\n",
-      "\n",
-      "23\n",
-      "False\n",
-      "4\n"
+      "10\n"
      ]
     }
    ],
@@ -596,13 +592,41 @@
     "    var_local = num1 * num2      #váriavel local (se não está definida, não pode ser chamada fora da função)\n",
     "    print(var_local)\n",
     "multiplica_numeros(5,25)\n",
-    "print(var_global)\n",
-    "print()\n",
-    "\n",
+    "print(var_global)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funções Parte 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "False\n",
+      "4\n",
+      "13\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
     "# Funções Built-in\n",
     "print(abs(-23))\n",
     "print(bool(0))\n",
-    "print(int(4.4))"
+    "print(int(4.4))\n",
+    "print(str(13))\n",
+    "print(float(5))"
    ]
   }
  ],
