--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,8 @@
       "False\n",
       "4\n",
       "13\n",
-      "5.0\n"
+      "5.0\n",
+      "4\n"
      ]
     }
    ],
@@ -626,7 +627,8 @@
     "print(bool(0))\n",
     "print(int(4.4))\n",
     "print(str(13))\n",
-    "print(float(5))"
+    "print(float(5))\n",
+    "print(int(4.99))"
    ]
   }
  ],
