--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -628,7 +628,8 @@
     "print(int(4.4))\n",
     "print(str(13))\n",
     "print(float(5))\n",
-    "print(int(4.2))"
+    "print(int(4.2))\n",
+    "print(int(4.4))"
    ]
   }
  ],
