--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -627,9 +627,7 @@
     "print(bool(0))\n",
     "print(int(4.4))\n",
     "print(str(13))\n",
-    "print(float(5))\n",
-    "\n",
-    "# funções"
+    "print(float(5))\n"
    ]
   }
  ],
