--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -626,8 +626,7 @@
     "print(bool(0))\n",
     "print(int(4.4))\n",
     "print(str(13))\n",
-    "print(float(5))\n",
-    "hello"
+    "print(float(5))"
    ]
   }
  ],
