--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -614,6 +614,7 @@
      "text": [
       "23\n",
       "False\n",
+      "True\n",
       "4\n",
       "13\n",
       "5.0\n"
@@ -624,6 +625,7 @@
     "# Funções Built-in\n",
     "print(abs(-23))\n",
     "print(bool(0))\n",
+    "print(bool(1))\n",
     "print(int(4.4))\n",
     "print(str(13))\n",
     "print(float(5))"
