--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,9 @@
       "True\n",
       "4\n",
       "13\n",
-      "5.0\n"
+      "5.0\n",
+      "\n",
+      "Você não pode acessar as redes sociais sem supervisão!\n"
      ]
     }
    ],
@@ -628,7 +630,16 @@
     "print(bool(1))\n",
     "print(int(4.4))\n",
     "print(str(13))\n",
-    "print(float(5))"
+    "print(float(5))\n",
+    "print()\n",
+    "\n",
+    "# Usando a função int para converter o valor digitado\n",
+    "idade = int(input('Digite sua idade: '))\n",
+    "if idade > 13:\n",
+    "    print(\"Você pode acessar as redes sociais sem supervisão!\")\n",
+    "else:\n",
+    "    print('Você não pode acessar as redes sociais sem supervisão!')\n",
+    "\n"
    ]
   },
   {
