--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -618,6 +618,13 @@
       "4\n",
       "13\n",
       "5.0\n",
+      "26\n",
+      "123.456\n",
+      "13\n",
+      "4\n",
+      "3\n",
+      "1\n",
+      "158\n",
       "\n",
       "Você não pode acessar as redes sociais sem supervisão!\n"
      ]
@@ -631,6 +638,15 @@
     "print(int(4.4))\n",
     "print(str(13))\n",
     "print(float(5))\n",
+    "print(int('26')) \n",
+    "print(float('123.456'))\n",
+    "print(str(13))\n",
+    "print(len([23,43,56,67]))\n",
+    "array = [1,2,3]\n",
+    "print(max(array))\n",
+    "print(min(array))\n",
+    "list1 = [16,23,44,75] \n",
+    "print(sum(list1))\n",
     "print()\n",
     "\n",
     "# Usando a função int para converter o valor digitado\n",
