--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -654,7 +654,7 @@
     "if idade > 13:\n",
     "    print(\"Você pode acessar as redes sociais sem supervisão!\")\n",
     "else:\n",
-    "    print('Você não pode acessar as redes sociais sem supervisão!')\n",
+    "    print('Você não pode acessar as redes sociais sem supervisão!') oi\n",
     "\n"
    ]
   },
