--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -655,6 +655,7 @@
     "    print(\"Você pode acessar as redes sociais sem supervisão!\")\n",
     "else:\n",
     "    print('Você não pode acessar as redes sociais sem supervisão!')\n",
+    "    buit \n",
     "\n"
    ]
   }
