Criando funções através de outras funções

--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,8 @@
       "1\n",
       "158\n",
       "\n",
-      "Você não pode acessar as redes sociais sem supervisão!\n"
+      "Você pode acessar as redes sociais sem supervisão!\n",
+      "\n"
      ]
     }
    ],
@@ -655,6 +656,18 @@
     "    print(\"Você pode acessar as redes sociais sem supervisão!\")\n",
     "else:\n",
     "    print('Você não pode acessar as redes sociais sem supervisão!')\n",
+    "print()\n",
+    "\n",
+    "# Criando funções usando outras funções\n",
+    "###### CONSERTAR O QUE NÃO ESTÁ FUNCIONANDO\n",
+    "import math \n",
+    "def numPrimo(num):\n",
+    "    if (num % 2) == 0 and num > 2:\n",
+    "        return \"Este número não é primo\"\n",
+    "    for i in range (3, int(math.sqrt(num)) + 1, 2):\n",
+    "        if (num % i) == 0:\n",
+    "            return \"Este número não é primo\"\n",
+    "    return \"Este número é primo\"\n",
     "\n"
    ]
   }
