--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -659,7 +659,7 @@
     "print()\n",
     "\n",
     "# Criando funções usando outras funções\n",
-    "########## CONSERTAR\n",
+    "########## CONSERTARR\n",
     "import math \n",
     "def numPrimo(num):\n",
     "    if (num % 2) == 0 and num > 2:\n",
