--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
       "1\n",
       "158\n",
       "\n",
-      "Você pode acessar as redes sociais sem supervisão!\n",
+      "Você não pode acessar as redes sociais sem supervisão!\n",
       "\n"
      ]
     }
@@ -659,7 +659,7 @@
     "print()\n",
     "\n",
     "# Criando funções usando outras funções\n",
-    "########## CONSERTAR\n",
+    "########## CONSERTARR\n",
     "import math \n",
     "def numPrimo(num):\n",
     "    if (num % 2) == 0 and num > 2:\n",
