--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -667,7 +667,7 @@
     "    for i in range (3, int(math.sqrt(num)) + 1, 2):\n",
     "        if (num % i) == 0:\n",
     "            return \"Este número não é primo\"\n",
-    "    return \"Este número é primo\"\n"
+    "    return \"Este número é primo\"aa\n"
    ]
   }
  ],
