--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -625,9 +625,18 @@
       "3\n",
       "1\n",
       "158\n",
-      "\n",
-      "Você não pode acessar as redes sociais sem supervisão!\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você pode acessar as redes sociais sem supervisão!\n",
+      "\n",
+      "Este número não é primo\n",
+      "Este número é primo\n",
+      "este texto deveria estar todo em lowercase\n"
      ]
     }
    ],
@@ -659,7 +668,6 @@
     "print()\n",
     "\n",
     "# Criando funções usando outras funções\n",
-    "########## CONSERTARR\n",
     "import math \n",
     "def numPrimo(num):\n",
     "    if (num % 2) == 0 and num > 2:\n",
@@ -667,7 +675,21 @@
     "    for i in range (3, int(math.sqrt(num)) + 1, 2):\n",
     "        if (num % i) == 0:\n",
     "            return \"Este número não é primo\"\n",
-    "    return \"Este número é primo\"\n"
+    "    return \"Este número é primo\"\n",
+    "\n",
+    "print(numPrimo(4000))\n",
+    "print(numPrimo(541))\n",
+    "print()\n",
+    "\n",
+    "# Fazendo Split dos Dados\n",
+    "caixa_baixa = 'Este Texto Deveria Estar Todo Em LowerCase'\n",
+    "def lowercase(text):\n",
+    "    return text.lower()\n",
+    "\n",
+    "print(lowercase(caixa_baixa))\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
