--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -625,18 +625,84 @@
       "3\n",
       "1\n",
       "158\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Você pode acessar as redes sociais sem supervisão!\n",
       "\n",
       "Este número não é primo\n",
       "Este número é primo\n",
-      "este texto deveria estar todo em lowercase\n"
+      "\n",
+      "este texto deveria estar todo em lowercase\n",
+      "['Essa', 'função', 'será', 'bastante', 'útil', 'para', 'separar', 'grandes', 'volumes', 'de', 'dados']\n",
+      "['Essa', 'função', 'será', 'bastante', 'útil', 'para', 'separar', 'grandes', 'volumes', 'de', 'dados']\n",
+      "E\n",
+      "S\n",
+      "S\n",
+      "A\n",
+      " \n",
+      "F\n",
+      "U\n",
+      "N\n",
+      "Ç\n",
+      "Ã\n",
+      "O\n",
+      " \n",
+      "S\n",
+      "E\n",
+      "R\n",
+      "Á\n",
+      " \n",
+      "B\n",
+      "A\n",
+      "S\n",
+      "T\n",
+      "A\n",
+      "N\n",
+      "T\n",
+      "E\n",
+      " \n",
+      "Ú\n",
+      "T\n",
+      "I\n",
+      "L\n",
+      " \n",
+      "P\n",
+      "A\n",
+      "R\n",
+      "A\n",
+      " \n",
+      "S\n",
+      "E\n",
+      "P\n",
+      "A\n",
+      "R\n",
+      "A\n",
+      "R\n",
+      " \n",
+      "G\n",
+      "R\n",
+      "A\n",
+      "N\n",
+      "D\n",
+      "E\n",
+      "S\n",
+      " \n",
+      "V\n",
+      "O\n",
+      "L\n",
+      "U\n",
+      "M\n",
+      "E\n",
+      "S\n",
+      " \n",
+      "D\n",
+      "E\n",
+      " \n",
+      "D\n",
+      "A\n",
+      "D\n",
+      "O\n",
+      "S\n",
+      "None\n"
      ]
     }
    ],
@@ -681,17 +747,28 @@
     "print(numPrimo(541))\n",
     "print()\n",
     "\n",
-    "# Fazendo Split dos Dados\n",
     "caixa_baixa = 'Este Texto Deveria Estar Todo Em LowerCase'\n",
     "def lowercase(text):\n",
     "    return text.lower()\n",
     "\n",
     "print(lowercase(caixa_baixa))  \n",
     "\n",
+    "# Fazendo Split dos Dados\n",
+    "def split_string_palavras(text):\n",
+    "    return text.split(\" \")\n",
     "\n",
+    "texto = 'Essa função será bastante útil para separar grandes volumes de dados'\n",
     "\n",
+    "print(split_string_palavras(texto))\n",
+    "token = split_string_palavras(texto)\n",
+    "print(token)\n",
     "\n",
+    "def split_string_letras(text):\n",
+    "    texto = text.upper() \n",
+    "    for letra in texto:\n",
+    "        print(letra)\n",
     "\n",
+    "print(split_string_letras(texto))\n",
     "\n",
     "\n"
    ]
