--- a/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
+++ b/Curso Python - Nível Introdutório/03LoopsCondicionaisMetodosFuncoes.ipynb
@@ -768,7 +768,9 @@
     "    for letra in texto:\n",
     "        print(letra)\n",
     "\n",
-    "print(split_string_letras(texto))\n"
+    "print(split_string_letras(texto))\n",
+    "\n",
+    "\n"
    ]
   }
  ],
